// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RSSLink snapshot renders with size 1`] = `
<a
  className="jsx-3248159136"
  href="/posts-rss.xml"
  onClick={[Function]}
  onMouseEnter={[Function]}
  target="_blank"
  title="RSS feed"
>
  <span
    className="jsx-3248159136 visually-hidden"
  >
    RSS feed
  </span>
  <svg
    aria-hidden="true"
    className="jsx-3248159136 svgIcon"
    focusable="false"
    height="42"
    viewBox="0 0 256 256"
    width="42"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      className="jsx-3248159136"
      fill="none"
      height="256"
      width="256"
    />
    <path
      className="jsx-3248159136 stroke"
      d="M48,144a64,64,0,0,1,64,64"
      fill="none"
      stroke="#284B63"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="16"
    />
    <path
      className="jsx-3248159136 stroke"
      d="M48,96A112,112,0,0,1,160,208"
      fill="none"
      stroke="#284B63"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="16"
    />
    <path
      className="jsx-3248159136 stroke"
      d="M48,48A160,160,0,0,1,208,208"
      fill="none"
      stroke="#284B63"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="16"
    />
    <circle
      className="jsx-3248159136 fill"
      cx="52"
      cy="204"
      r="12"
    />
  </svg>
</a>
`;

exports[`RSSLink snapshot renders without size 1`] = `
<a
  className="jsx-3248159136"
  href="/posts-rss.xml"
  onClick={[Function]}
  onMouseEnter={[Function]}
  target="_blank"
  title="RSS feed"
>
  <span
    className="jsx-3248159136 visually-hidden"
  >
    RSS feed
  </span>
  <svg
    aria-hidden="true"
    className="jsx-3248159136 svgIcon"
    focusable="false"
    height="35"
    viewBox="0 0 256 256"
    width="35"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      className="jsx-3248159136"
      fill="none"
      height="256"
      width="256"
    />
    <path
      className="jsx-3248159136 stroke"
      d="M48,144a64,64,0,0,1,64,64"
      fill="none"
      stroke="#284B63"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="16"
    />
    <path
      className="jsx-3248159136 stroke"
      d="M48,96A112,112,0,0,1,160,208"
      fill="none"
      stroke="#284B63"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="16"
    />
    <path
      className="jsx-3248159136 stroke"
      d="M48,48A160,160,0,0,1,208,208"
      fill="none"
      stroke="#284B63"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="16"
    />
    <circle
      className="jsx-3248159136 fill"
      cx="52"
      cy="204"
      r="12"
    />
  </svg>
</a>
`;
